Fix issue #77 (Solid colored bars behind sent messages) (Windows & macOS)

--- a/styles/darwin/dark.css
+++ b/styles/darwin/dark.css
@@ -588,7 +588,7 @@ html[dir=ltr] ._1LdNS:hover:not(.cJP5q) {
 
 
 /* Message bubbles. */
-html[dir] .message-in ._2Wx_5, .message-out, .message {
+html[dir] .message-in ._2Wx_5, .message {
     background-color: var(--darker) !important; }
 html[dir] .message-out ._2Wx_5 {
     background-color: var(--msgout) !important; }
